# talent-plan

courses/dss/: .gitignore  README_INDEX_zh.md  README_zh.md  notes.md
courses/dss/labcodec/: README_zh.md  build.rs
courses/dss/labcodec/demonstration/: README_zh.md
courses/dss/labcodec/docs/: notes.md
courses/dss/labcodec/proto/: fixture.proto
courses/dss/labcodec/src/: lib.rs
courses/dss/labrpc/: README_zh.md
courses/dss/linearizability/: README_zh.md
courses/dss/percolator/: README_zh.md
courses/dss/raft/: README_zh.md
courses/rust/projects/: README_SUMMARY.md
courses/rust/projects/project-1/: Cargo.toml  README_CN.md
courses/rust/projects/project-1/src/: kv.rs  lib.rs
courses/rust/projects/project-2/: README_CN.md  notes.md
courses/rust/projects/project-2/src/: error.rs  kv.rs  lib.rs
courses/rust/projects/project-2/tests/: tests.rs
courses/rust/projects/project-3/: Cargo.toml  README_CN.md  notes.md
courses/rust/projects/project-3/benches/: engine_compare.rs  fib_bench.rs
courses/rust/projects/project-3/src/: client.rs  common.rs  error.rs  server.rs
courses/rust/projects/project-3/src/engines/: kvs.rs  mod.rs  sled.rs
courses/rust/projects/project-4/: README_zh.md  notes.md
courses/rust/projects/project-4/src/: client.rs  common.rs  error.rs  server.rs
courses/rust/projects/project-4/src/engines/: kvs.rs  mod.rs  (+1 more)
courses/rust/projects/project-4/tests/: index_compare.rs
courses/rust/projects/project-5/: .gitignore  README_CN.md
courses/rust/projects/project-5/src/: client.rs  common.rs  error.rs  lib.rs  server.rs
(+11 files in other folders)
